added psnr functions

--- a/code/new_RIDENT_fresh.ipynb
+++ b/code/new_RIDENT_fresh.ipynb
@@ -425,6 +425,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def pnsr(original, denoised):\n",
+        "  mse = np.mean((original - denoised) ** 2)\n",
+        "  if mse == 0:\n",
+        "    return float('inf') # immagini identiche\n",
+        "  max_pixel = 1.0 # valore massimo per immagini normalizzate in [0, 1]\n",
+        "  return 10 * np.log10((max_pixel ** 2) / mse)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 13,
       "metadata": {
         "colab": {
