--- a/code/new_autoencoder_fresh.ipynb
+++ b/code/new_autoencoder_fresh.ipynb
@@ -315,12 +315,42 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def pnsr(original, denoised):\n",
+        "def pnsr(original, denoised, max_pixel=1.0):\n",
         "  mse = np.mean((original - denoised) ** 2)\n",
         "  if mse == 0:\n",
         "    return float('inf') # immagini identiche\n",
-        "  max_pixel = 1.0 # valore massimo per immagini normalizzate in [0, 1]\n",
-        "  return 10 * np.log10((max_pixel ** 2) / mse)"
+        "  return 10 * np.log10((max_pixel ** 2) / mse)\n",
+        "\n",
+        "def batch_psnr(original_imgs, denoised_imgs, max_pixel=1.0):\n",
+        "    \"\"\"\n",
+        "    Calcola e visualizza il PSNR per ogni coppia di immagini (originale, denoised).\n",
+        "    \"\"\"\n",
+        "    assert original_imgs.shape == denoised_imgs.shape, \"Shape mismatch!\"\n",
+        "\n",
+        "    psnr_values = []\n",
+        "    for i in range(original_imgs.shape[0]):\n",
+        "        mse = np.mean((original_imgs[i] - denoised_imgs[i]) ** 2)\n",
+        "        if mse == 0:\n",
+        "            psnr_values.append(float('inf'))\n",
+        "        else:\n",
+        "            psnr_values.append(psnr(original_imgs[i], denoised_imgs[i]))\n",
+        "    \n",
+        "    return psnr_values\n",
+        "\n",
+        "def plot_psnr(psnr_values, title=\"PSNR per immagine\"):\n",
+        "    \"\"\"\n",
+        "    Mostra un grafico a linee dei valori PSNR per immagine.\n",
+        "    \n",
+        "    psnr_values: lista o array di valori PSNR\n",
+        "    \"\"\"\n",
+        "    plt.figure(figsize=(10, 4))\n",
+        "    plt.plot(psnr_values, marker='o', linestyle='-')\n",
+        "    plt.title(title)\n",
+        "    plt.xlabel(\"Indice immagine\")\n",
+        "    plt.ylabel(\"PSNR (dB)\")\n",
+        "    plt.grid(True)\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()"
       ]
     },
     {
