--- a/main.tex
+++ b/main.tex
@@ -120,6 +120,9 @@ riottenere l'immagine originale è importante per prestazioni robuste o ricostru
 Le reti neurali convoluzionali lavorano bene con le immagini e ne utilizzeremo N, menzionate in alcuni paper di ricerca e compareremo i risultati di ogni modello.\\
 
 \section{Dataset utilizzati}
+Il primo dataset usato per addrestrare i modelli sarà Oxford-IIIT Pet da Tensorflow, in modo poi da testare i modelli con immagini che non conoscono da altri dataset(colonscopie)
+
+
 gli animali di arvard, le colonscopie \TODOComment{Approfondire aggiungendo link ai dataset e approfondire cose che non ci sono}
 
 \chapter{Decsrizione delle reti}
