--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage{latexsym}
 \usepackage{listings}
 \usepackage{makeidx}
+\usepackage{minted}
 \usepackage{tikz}
 \usepackage{titlesec}
 \usepackage{wrapfig}
@@ -120,8 +121,55 @@ riottenere l'immagine originale è importante per prestazioni robuste o ricostru
 Le reti neurali convoluzionali lavorano bene con le immagini e ne utilizzeremo N, menzionate in alcuni paper di ricerca e compareremo i risultati di ogni modello.\\
 
 \section{Dataset utilizzati}
-Il primo dataset usato per addrestrare i modelli sarà Oxford-IIIT Pet da Tensorflow, in modo poi da testare i modelli con immagini che non conoscono da altri dataset(colonscopie)
+Il primo dataset usato per addrestrare i modelli sarà Oxford-IIIT Pet da Tensorflow, in modo poi da testare i modelli con immagini che non conoscono da altri dataset(colonscopie)\\
+\begin{lstlisting}{python}
+def load_dataset(split='train', img_size=(256,256), batch_size=16):
+    #Carica il dataset Oxford-IIIT Pet da tfds e applica il #preprocessamento.
 
+    #Ritorna un dataset in batch.
+
+    # as_supervised=False per mantenere dict
+    dataset = tfds.load('oxford_iiit_pet', split=split, as_supervised=False) 
+    # Preprocessing
+    dataset = dataset.map(lambda sample: preprocess(sample, img_size))  
+    # Ottimizza il caricamento
+    dataset = dataset.shuffle(1024).batch(batch_size).prefetch(tf.data.AUTOTUNE)  
+    return dataset
+\end{lstlisting}\\
+
+\begin{minted}{python}
+  import numpy as np
+      
+  def incmatrix(genl1,genl2):
+      m = len(genl1)
+      n = len(genl2)
+      M = None #to become the incidence matrix
+      VT = np.zeros((n*m,1), int)  #dummy variable
+      
+      #compute the bitwise xor matrix
+      M1 = bitxormatrix(genl1)
+      M2 = np.triu(bitxormatrix(genl2),1) 
+  
+      for i in range(m-1):
+          for j in range(i+1, m):
+              [r,c] = np.where(M2 == M1[i,j])
+              for k in range(len(r)):
+                  VT[(i)*n + r[k]] = 1;
+                  VT[(i)*n + c[k]] = 1;
+                  VT[(j)*n + r[k]] = 1;
+                  VT[(j)*n + c[k]] = 1;
+                  
+                  if M is None:
+                      M = np.copy(VT)
+                  else:
+                      M = np.concatenate((M, VT), 1)
+                  
+                  VT = np.zeros((n*m,1), int)
+      
+      return M
+  \end{minted}
+
+Kvasir-seg: 1000(MILLEH) immagini di polipi, 
 
 gli animali di arvard, le colonscopie \TODOComment{Approfondire aggiungendo link ai dataset e approfondire cose che non ci sono}
 
