--- a/code/new_RIDENT_fresh.ipynb
+++ b/code/new_RIDENT_fresh.ipynb
@@ -358,21 +358,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "-5SWsXnkKwGA"
       },
       "outputs": [],
       "source": [
         "# Parametri\n",
-        "img_size = (224, 224)\n",
-        "batch_size = 20\n",
-        "noise_factor = np.random.uniform(0.1, 0.9)\n",
+        "img_size = (112, 112)\n",
+        "batch_size = 64\n",
+        "noise_factor = 0.4\n",
         "epochs = 50\n",
         "\n",
         "# Caricamento dataset\n",
         "train_ds = load_dataset(split='train', img_size=img_size, batch_size=batch_size)\n",
-        "test_ds  = load_dataset(split='test', img_size=img_size, batch_size=batch_size)"
+        "test_ds  = load_dataset(split='test', img_size=img_size, batch_size=batch_size)\n",
+        "validation_ds = load_dataset(split='validation', img_size=img_size, batch_size=batch_size)"
       ]
     },
     {
