--- a/main.tex
+++ b/main.tex
@@ -197,6 +197,12 @@ stessa cosa dell'autencoder (vedere se aggiungere tutto il codice gigante del se
 PSNR è il metodo più comune per misurare la qualità delle immagini.\\
 Il PSNR è definito come il rapporto tra il massimo valore possibile di un segnale e il valore del rumore che disturba la qualità della sua rappresentazione.\\ Normalmente misurato in una scala logaritmica in decibel(dB).\\
 Data l'immagine originale(\textit{g}) e l'immagine rumorosa(\textit{f}), il PSNR è definito come: \[PSNR=20log_{10}(\frac{MAX_f}{\sqrt{MSE}})\] dove $MAX_f$ è il valore massimo del pixel dell'immagine e si calcola come \[MSE=\frac{1}{mn}\sum_{0}^{m-1}\sum_{0}^{n-1}||f(i,j)-g(i,j)||^2  \] mentre $MSE$(\textit{Mean Square Error}) è l'errore quadratico medio tra l'immagine originale e quella rumorosa.\\
+\section{Prima run}
+\subsection{Autoencoder}
+
+
+\subsection{RIDNet}
+
 \TODOComment{Aggiungere codice del pnrr}
 
 
