--- a/main.tex
+++ b/main.tex
@@ -22,19 +22,27 @@
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
 \definecolor{mymauve}{rgb}{0.58,0,0.82}
+\definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
 
-\graphicspath{ {./img/} }
 \lstset{
-basicstyle=\ttfamily,
-language=Python,
-commentstyle=\color{mygreen},
-keywordstyle=\color{blue},
-numberstyle=\tiny\color{mygray},
-stringstyle=\color{mymauve},
-numbers=left,
-showstringspaces=false
-extendedchars=true
+  basicstyle=\ttfamily,
+  language=Python,
+  commentstyle=\color{mygreen},
+  keywordstyle=\color{blue},
+  numberstyle=\tiny\color{mygray},
+  stringstyle=\color{mymauve},
+  numbers=left,
+  showstringspaces=false,
+  extendedchars=true,
+  breaklines=true,              % A capo automatico per righe lunghe
+  breakatwhitespace=false,     % Non limitare l'a capo agli spazi
+  breakautoindent=true,        % Mantieni indentazione dopo l'a capo
+  postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space} % Indicatore visivo dell'a capo
 }
+\graphicspath{ {./img/} }
+
 \newcommand{\qvec}[1]{	extbf{	extit{#1}}}
 \newcommand{\mathbi}[1]{	extbf{\em #1}}
 \newcommand{\TODOComment}[1]{}
@@ -177,6 +185,19 @@ gli animali di arvard, le colonscopie \TODOComment{Approfondire aggiungendo link
 
 \chapter{Decsrizione delle reti}
 \section{Rumore}
+La prima funzione di rumore è u'aggiunta di rumore casuale a ogni pixel dell'immagine.\\
+\begin{lstlisting}{python}
+  def add_noise(x, noise_factor=0.1):
+    """
+    x: immagine in input
+    noise_factor: fattore di rumore da aggiungere
+    Ritorna:
+      x_noisy: immagine con rumore aggiunto
+    """
+    noise = tf.random.normal(shape=tf.shape(x), mean=0.0, stddev=1.0)
+    x_noisy = x + noise_factor * noise
+    return x_noisy
+\end{lstlisting}
 E FAI RUMORE \textbf{QUIIIIIIIIIIIIIIIIIIIIIIIIIIIII}
 Prima funzione di rumore -> Random noise con fattore 0.3 massimo
 \TODOComment{questi 2 più avanti}
@@ -219,6 +240,7 @@ def build_autoencoder(input_shape):
 autoencoder = build_autoencoder(input_shape=(img_size[0], img_size[1], 3))
 autoencoder.summary()
 \end{lstlisting}
+
 \TODOComment{Modificare il dataset per i cosi successivi}
 
 \section{RIDNet}
@@ -403,6 +425,8 @@ PSNR è il metodo più comune per misurare la qualità delle immagini.\\
 Il PSNR è definito come il rapporto tra il massimo valore possibile di un segnale e il valore del rumore che disturba la qualità della sua rappresentazione.\\ Normalmente misurato in una scala logaritmica in decibel(dB).\\
 Data l'immagine originale(\textit{g}) e l'immagine rumorosa(\textit{f}), il PSNR è definito come: \[PSNR=20log_{10}(\frac{MAX_f}{\sqrt{MSE}})\] dove $MAX_f$ è il valore massimo del pixel dell'immagine e si calcola come \[MSE=\frac{1}{mn}\sum_{0}^{m-1}\sum_{0}^{n-1}||f(i,j)-g(i,j)||^2  \] mentre $MSE$(\textit{Mean Square Error}) è l'errore quadratico medio tra l'immagine originale e quella rumorosa.\\
 \section{Prima run}
+Il primo allenamento è stato sottoposto a entrambi i modelli con immagini RGB con risoluzione 112x112 pixel, un noise\_factor di 0.4 e 50 epoche di training.\\
+Per l'autoenconcoder è stata usata una batch\_size di 16 mentre per la RIDNet una di 20.\\
 \subsection{Autoencoder}
 Model: "functional"\\
 \begin{tabular}{|| c | c | c ||}
@@ -421,7 +445,7 @@ Model: "functional"\\
   \hline
   conv2d\_2 & (None, 28, 28, 64) & 36,928 \\
   \hline
-  up\_sampling2d & (None, 56, 56, 64) & 0 \\
+  up\_sampling2d & (N one, 56, 56, 64) & 0 \\
   \hline
   conv2d\_3 & (None, 56, 56, 64) & 36,928 \\
   \hline
